argo-apps/jenkins/volume-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  template:
    spec:
      containers:
      - name: jenkins
        volumeMounts:
          - mountPath: /var/jenkins_home/jenkins.yaml
            name: test-config
            subPath: jenkins.yaml
            readOnly: true
      volumes:
        - name: test-vol
          configMap:
            name: test-config
